--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Text Detection</string>
+    <string name="Open">Open</string>
+    <string name="Close">Close</string>
 </resources>
